--- a/src/styles/gradient-animation.css
+++ b/src/styles/gradient-animation.css
@@ -1,4 +1,4 @@
-.layout {
+.bg-gradient {
   background: linear-gradient(180deg, #000 0%, #c48408 100%);
   background-size: 400% 400%;
   -webkit-animation: gradient-pulse 12s ease infinite;
